main/default/objects/Account/fields/Age_of_Customer_Business__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Customer_Business__c</fullName>
    <formula>IF(Today()&lt;DATEVALUE(CreatedDate), "Check the Date!",

TEXT(IF(YEAR(Today())=YEAR(DATEVALUE(CreatedDate)),0,IF(YEAR(Today())-YEAR(DATEVALUE(CreatedDate))=1,IF(MONTH(Today())=MONTH(DATEVALUE(CreatedDate)),IF(DAY(Today())&lt;DAY(DATEVALUE(CreatedDate)),0,1),IF(MONTH(Today())&lt;MONTH(DATEVALUE(CreatedDate)),IF(DAY(Today())&lt;DAY(DATEVALUE(CreatedDate)),1,0),1)),IF(MONTH(Today())-MONTH(DATEVALUE(CreatedDate))&lt;0,YEAR(Today())-YEAR(DATEVALUE(CreatedDate))-1,IF(MONTH(Today())=MONTH(DATEVALUE(CreatedDate)),IF(DAY(Today())&lt;DAY(DATEVALUE(CreatedDate)),YEAR(Today())-YEAR(DATEVALUE(CreatedDate))-1,YEAR(Today())-YEAR(DATEVALUE(CreatedDate))),YEAR(Today())-YEAR(DATEVALUE(CreatedDate))))))) &amp; " year(s), " &amp;

TEXT(IF(YEAR(Today())=YEAR(DATEVALUE(CreatedDate)),IF(MONTH(Today())=MONTH(DATEVALUE(CreatedDate)),0,IF(MONTH(Today())>MONTH(DATEVALUE(CreatedDate)),IF(DAY(Today())&lt;DAY(DATEVALUE(CreatedDate)),MONTH(Today())-MONTH(DATEVALUE(CreatedDate))-1,MONTH(Today())-MONTH(DATEVALUE(CreatedDate))),0)),IF(MONTH(Today())=MONTH(DATEVALUE(CreatedDate)),IF(DAY(Today())&lt;DAY(DATEVALUE(CreatedDate)),11,0),IF(MONTH(Today())>MONTH(DATEVALUE(CreatedDate)),IF(DAY(Today())&lt;DAY(DATEVALUE(CreatedDate)),MONTH(Today())-MONTH(DATEVALUE(CreatedDate))-1,MONTH(Today())-MONTH(DATEVALUE(CreatedDate))),IF(MONTH(Today())&lt;MONTH(DATEVALUE(CreatedDate)),IF(DAY(Today())&lt;DAY(DATEVALUE(CreatedDate)),11-(MONTH(DATEVALUE(CreatedDate))-MONTH(Today())),12-(MONTH(DATEVALUE(CreatedDate))-MONTH(Today()))),12-(MONTH(DATEVALUE(CreatedDate))-MONTH(Today()))))))) &amp; " month(s), &amp; " &amp;

TEXT(IF(DAY(Today())>=DAY(DATEVALUE(CreatedDate)),DAY(Today())-DAY(DATEVALUE(CreatedDate)),31-(DAY(DATEVALUE(CreatedDate))-DAY(Today())))) &amp; " day(s)"

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age of Customer Business</label>
    <type>Text</type>
</CustomField>