main/default/objects/Account/fields/Big_C_Name__c.field-meta.xml
<CustomField>
    <fullName>Big_C_Name__c</fullName>
    <defaultValue>"Unspecified"</defaultValue>
    <description>Big Customer Name defined by Finance. Populated by ELink</description>
    <inlineHelpText>Big Customer Name defined by Finance</inlineHelpText>
    <label>Big C Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>