main/default/objects/Account/fields/Billing_Location__c.field-meta.xml
<CustomField>
    <fullName>Billing_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the Billing location record for the account</description>
    <label>Default Billing Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Billing Location)</relationshipLabel>
    <relationshipName>BillLocAcct</relationshipName>
    <type>Lookup</type>
</CustomField>