main/default/objects/Account/fields/Brand_Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Brand_Territory_Code__c</fullName>
    <description>The code used to define the Territory</description>
    <label>Brand Territory Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>