main/default/objects/Account/fields/BUSINESS_SUBTYPE__c.field-meta.xml
<CustomField>
    <fullName>BUSINESS_SUBTYPE__c</fullName>
    <description>MDM Integration</description>
    <inlineHelpText>Business Sub Type - MDM</inlineHelpText>
    <label>Business Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BASE</fullName>
            </value>
            <value>
                <fullName>COMPETITIVE</fullName>
            </value>
            <value>
                <fullName>INDEPENDENT</fullName>
            </value>
            <value>
                <fullName>OPHTHALMOLOGIST</fullName>
            </value>
            <value>
                <fullName>OPTICIAN</fullName>
            </value>
            <value>
                <fullName>OPTOMETRIST</fullName>
            </value>
            <value>
                <fullName>PARTNER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>