main/default/objects/Account/fields/BUSINESS_TYPE__c.field-meta.xml
<CustomField>
    <fullName>BUSINESS_TYPE__c</fullName>
    <description>MDM Integration</description>
    <inlineHelpText>Business Type - MDM</inlineHelpText>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BG</fullName>
            </value>
            <value>
                <fullName>ECP</fullName>
            </value>
            <value>
                <fullName>IND</fullName>
            </value>
            <value>
                <fullName>INT</fullName>
            </value>
            <value>
                <fullName>LAB</fullName>
            </value>
            <value>
                <fullName>MC</fullName>
            </value>
            <value>
                <fullName>RET</fullName>
            </value>
            <value>
                <fullName>SCH</fullName>
            </value>
            <value>
                <fullName>WHS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>