main/default/objects/Account/fields/BUSINESS_UNIT__c.field-meta.xml
<CustomField>
    <fullName>BUSINESS_UNIT__c</fullName>
    <description>MDM Integration</description>
    <inlineHelpText>Sales channel:  ELOA, NIP, etc.</inlineHelpText>
    <label>Business Unit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>