main/default/objects/Account/fields/Buying_Group__c.field-meta.xml
<CustomField>
    <fullName>Buying_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to MBG Account record</description>
    <inlineHelpText>MBG Relationship; Master Buying Group associated with the account.</inlineHelpText>
    <label>MBG Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (MBG)</relationshipLabel>
    <relationshipName>MBGAccount</relationshipName>
    <type>Lookup</type>
</CustomField>