main/default/objects/Account/fields/CBusiness_Owner1__c.field-meta.xml
<CustomField>
    <fullName>CBusiness_Owner1__c</fullName>
    <label>Business Owner1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>