main/default/objects/Account/fields/CBusiness_Owner2__c.field-meta.xml
<CustomField>
    <fullName>CBusiness_Owner2__c</fullName>
    <label>Business Owner2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>