main/default/objects/Account/fields/CDate_of_Business_Formation__c.field-meta.xml
<CustomField>
    <fullName>CDate_of_Business_Formation__c</fullName>
    <label>Date of Business Formation</label>
    <type>Date</type>
</CustomField>