main/default/objects/Account/fields/CLegal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>CLegal_Entity_Name__c</fullName>
    <label>Legal Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>