main/default/objects/Account/fields/CLegal_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>CLegal_Entity_Type__c</fullName>
    <label>Legal Entity Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>