main/default/objects/Account/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <defaultValue>"Unspecified"</defaultValue>
    <description>Customer Segment defined by Finance. Populated by ELink</description>
    <inlineHelpText>Customer Segment defined by Finance</inlineHelpText>
    <label>Customer Segment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>