main/default/objects/Account/fields/DBA__c.field-meta.xml
<CustomField>
    <fullName>DBA__c</fullName>
    <description>MDM Integration</description>
    <inlineHelpText>DBA - MDM</inlineHelpText>
    <label>DBA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>