main/default/objects/Account/fields/Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not send email blasts from Essilor; only Brand SC</description>
    <inlineHelpText>Do not send email blasts from Essilor; only Brand SC</inlineHelpText>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>