main/default/objects/Account/fields/Do_Not_Contact_for_Ext_Marketing_Call__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact_for_Ext_Marketing_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Exclude from external Mktg campaigns</description>
    <inlineHelpText>Exclude from external Mktg campaigns</inlineHelpText>
    <label>Do Not Contact for Ext Marketing Call</label>
    <type>Checkbox</type>
</CustomField>