main/default/objects/Account/fields/Do_Not_Publish_Web_Referral__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Publish_Web_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not publish email address on referral sites</description>
    <inlineHelpText>Do not publish email address on referral sites</inlineHelpText>
    <label>Do Not Publish (Web Referral)</label>
    <type>Checkbox</type>
</CustomField>