main/default/objects/Account/fields/ENTITY_CD__c.field-meta.xml
<CustomField>
    <fullName>ENTITY_CD__c</fullName>
    <description>MDM Integration</description>
    <inlineHelpText>Entity Code - MDM</inlineHelpText>
    <label>Entity CD</label>
    <length>2</length>
    <type>Text</type>
</CustomField>