main/default/objects/Account/fields/ENTITY_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>ENTITY_DESCRIPTION__c</fullName>
    <description>MDM Integration</description>
    <inlineHelpText>Lab Name - MDM</inlineHelpText>
    <label>Entity Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>