main/default/objects/Account/fields/ENTITY_GROUP__c.field-meta.xml
<CustomField>
    <fullName>ENTITY_GROUP__c</fullName>
    <description>MDM Integration</description>
    <inlineHelpText>Lab Group IDD/NIP/ELOA</inlineHelpText>
    <label>Entity Group</label>
    <length>4</length>
    <type>Text</type>
</CustomField>