main/default/objects/Account/fields/ENTITY_REF__c.field-meta.xml
<CustomField>
    <fullName>ENTITY_REF__c</fullName>
    <description>MDM Integration</description>
    <inlineHelpText>Integrated Lab Code _ Lab Group</inlineHelpText>
    <label>Entity Ref</label>
    <length>5</length>
    <type>Text</type>
</CustomField>