main/default/objects/Account/fields/Group_Alliance_Type__c.field-meta.xml
<CustomField>
    <fullName>Group_Alliance_Type__c</fullName>
    <label>Aliiance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buying Group</fullName>
            </value>
            <value>
                <fullName>Strategic Alliance</fullName>
            </value>
            <value>
                <fullName>Doctor Alliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>