main/default/objects/Account/fields/Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Integration_ID__c</fullName>
    <description>Unique identifier for the record in the source system. . In case of composite keys, the value in this column can consist of concatenated parts. 
Internal field; Should not be exposed to end users.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for the record in the source system</inlineHelpText>
    <label>Integration ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>