main/default/objects/Account/fields/Lab_Location__c.field-meta.xml
<CustomField>
    <fullName>Lab_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the Lab location (Geolocation) record for the Account Detail</description>
    <inlineHelpText>Lookup field to the Lab location (Geolocation) record for the Account Detail</inlineHelpText>
    <label>Lab Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Details</relationshipLabel>
    <relationshipName>LabLocationAccount</relationshipName>
    <type>Lookup</type>
</CustomField>