main/default/objects/Account/fields/Lab_Sales_Territory__c.field-meta.xml
<CustomField>
    <fullName>Lab_Sales_Territory__c</fullName>
    <description>Territory code for account detail record from MDM.</description>
    <inlineHelpText>Territory code for account detail record from MDM.</inlineHelpText>
    <label>Lab Sales Territory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>