main/default/objects/Account/fields/Latitude_MDM__c.field-meta.xml
<CustomField>
    <fullName>Latitude_MDM__c</fullName>
    <label>Latitude MDM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>