main/default/objects/Account/fields/Local_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Local_Account_Number__c</fullName>
    <description>Account that each lab assigns to a customer (ECP).  The same customer may have different account numbers at different labs.</description>
    <label>Local LMS Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>