main/default/objects/Account/fields/Longitude_MDM__c.field-meta.xml
<CustomField>
    <fullName>Longitude_MDM__c</fullName>
    <label>Longitude MDM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>