main/default/objects/Account/fields/MBG_Classification__c.field-meta.xml
<CustomField>
    <fullName>MBG_Classification__c</fullName>
    <defaultValue>"UNKNOWN"</defaultValue>
    <description>Provides a high level classification of the different MBG (e.g. VSP, Eyemed)
Only applicable to the "Group/Alliance' Record Type</description>
    <inlineHelpText>Provides a high level classification of the different MBG (e.g. VSP, Eyemed)</inlineHelpText>
    <label>MBG Classification</label>
    <length>50</length>
    <type>Text</type>
</CustomField>