main/default/objects/Account/fields/MBG_Code__c.field-meta.xml
<CustomField>
    <fullName>MBG_Code__c</fullName>
    <label>MBG Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>