main/default/objects/Account/fields/MBG_Segment__c.field-meta.xml
<CustomField>
    <fullName>MBG_Segment__c</fullName>
    <formula>case( Big_C_Name__c,
"VSP","VSP",
"EYEMED","EYEMED",
"AFFILIATE EYEMED","EYEMED",
"PRIVATE PAY")</formula>
    <inlineHelpText>Managed care classification (Eyemed,VSP,PP) based on the Big C Name</inlineHelpText>
    <label>MBG Segment</label>
    <type>Text</type>
</CustomField>