main/default/objects/Account/fields/MDM_ID__c.field-meta.xml
<CustomField>
    <fullName>MDM_ID__c</fullName>
    <description>MDM integration</description>
    <inlineHelpText>Account ID - MDM</inlineHelpText>
    <label>MDM ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>