main/default/objects/Account/fields/MSTR_BYNG_GRP_DESC__c.field-meta.xml
<CustomField>
    <fullName>MSTR_BYNG_GRP_DESC__c</fullName>
    <description>Updated by EDW</description>
    <label>Buying Group</label>
    <length>30</length>
    <type>Text</type>
</CustomField>