main/default/objects/Account/fields/ORACLE_ACCT_NUM__c.field-meta.xml
<CustomField>
    <fullName>ORACLE_ACCT_NUM__c</fullName>
    <description>MDM Integration</description>
    <inlineHelpText>Oracle Account Number - MDM</inlineHelpText>
    <label>Oracle Account Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>