main/default/objects/Account/fields/Primary_Lab_Channel__c.field-meta.xml
<CustomField>
    <fullName>Primary_Lab_Channel__c</fullName>
    <description>This is the primary channel or the channel that this account does the most business with today.</description>
    <label>Primary Lab Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ELOA</fullName>
            </value>
            <value>
                <fullName>IDD</fullName>
            </value>
            <value>
                <fullName>Integrated Retail</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>ELOA/IDD</fullName>
            </value>
            <value>
                <fullName>ELOA/Partner</fullName>
            </value>
            <value>
                <fullName>Partner/IDD</fullName>
            </value>
            <value>
                <fullName>No Primary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>