main/default/objects/Account/fields/State_of_Business_Formation__c.field-meta.xml
<CustomField>
    <fullName>State_of_Business_Formation__c</fullName>
    <label>State of Business Formation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>