main/default/objects/Account/fields/Strategic_Account_Eff_Date__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Account_Eff_Date__c</fullName>
    <label>Strategic Account Eff Date</label>
    <type>DateTime</type>
</CustomField>