main/default/objects/Account/fields/SUITE__c.field-meta.xml
<CustomField>
    <fullName>SUITE__c</fullName>
    <description>MDM Integration</description>
    <inlineHelpText>Suite - MDM</inlineHelpText>
    <label>Suite</label>
    <length>100</length>
    <type>Text</type>
</CustomField>